--- a/index.html
+++ b/index.html
@@ -1910,7 +1910,7 @@ function autoSelectDefaultSymptom(menuId) {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約情報】\n《お名前》${formData.name}\n《電話番号》${formData.phone}\n\nコース：${formData.selectedMenu}\n《メニュー》：${formData.selectedMenu}\n\n【希望日時】\n《第一希望日》\n${formatDate(formData.dates[0])}\n\n《第二希望日》\n${formatDate(formData.dates[1])}\n\n《第三希望日》\n${formatDate(formData.dates[2])}\n\n《メッセージ》\n${formData.message}`
+                text: `【予約情報】\n《お名前》${formData.name}\n《電話番号》${formData.phone}\n\n《コース》：${formData.selectedMenu}\n《メニュー》：${formData.selectedMenu}\n\n【希望日時】\n《第一希望日》\n${formatDate(formData.dates[0])}\n\n《第二希望日》\n${formatDate(formData.dates[1])}\n\n《第三希望日》\n${formatDate(formData.dates[2])}\n\n《メッセージ》\n${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('確認してご連絡差し上げます。');
