--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
         <input type="tel" id="phone" placeholder="電話番号を入力してください" oninput="saveInput('phone')">
 
         <div class="label">出産日または予定日<span class="required">必須</span></div>
-        <input type="tel" id="dueDate" placeholder="出産日または予定日を入力してください" oninput="saveInput('dueDate')">
+        <input type="text" id="dueDate" placeholder="出産日または予定日を入力してください" oninput="saveInput('dueDate')">
 
         <div class="label">行政区<span class="required">必須</span></div>
         <input type="text" id="region" placeholder="行政区を入力してください" oninput="saveInput('region')">
