--- a/index.html
+++ b/index.html
@@ -1670,17 +1670,22 @@ function removeSymptom(button) {
                 return;
             }
 
-// irradiationsCountの整形（nullチェック）
-const irradiationsText = formData.irradiationsCount ? formData.irradiationsCount : '';
+// selectedSymptomを文字列に整形
+const selectedSymptomText = formData.selectedSymptom
+    ? formData.selectedSymptom.map(item => `${item.name}`).join(',')
+    : 'メニュー未選択';
 
-// メニュー部分を組み立てる
-const menuText = irradiationsText
+// irradiationsCountの整形（nullチェック不要：空なら空文字にする）
+const irradiationsText = formData.irradiationsCount ? formData.irradiationsCount : "";
+
+// メニュー＋照射部位を結合（空ならカンマなし）
+const menuAndIrradiations = irradiationsText
     ? `${selectedSymptomText},${irradiationsText}`
     : selectedSymptomText;
 
 liff.sendMessages([{
     type: 'text',
-    text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${menuText}\n希望日時：\n${formData.dates[0]}\nメッセージ：${formData.message}`
+    text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${menuAndIrradiations}\n希望日時：\n${formData.dates[0]}\nメッセージ：${formData.message}`
 }]).then(() => {
     alert('当日キャンセルは無いようにお願いいたします。');
     liff.closeWindow();
