--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             /* 画面中央に固定 */
             transform: translateY(-50%) translateX(10px);
             /* 中央配置と右ずらし */
-            background: #F067A6;
+            background: #3e3f41;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -104,7 +104,7 @@
         }
 
         h1 {
-            background: linear-gradient(135deg, #F067A6, #F067A6);
+            background: linear-gradient(135deg, #3e3f41, #0c0c0c);
             color: white;
             padding: 20px;
             border-radius: 0 0px 0px 0px;
@@ -123,8 +123,8 @@
             margin-bottom: 20px;
             padding: 3px;
             font-weight: 400;
-            background-color: #F067A6;
-            color: #ffffff;
+            background-color: #ffffff;
+            color: #1f1f20;
             border-radius: 0px;
             font-size: 18px;
             text-align: center;
@@ -141,8 +141,8 @@
             display: block;
             margin-bottom: 20px;
             padding: 3px;
-            background-color: #F067A6;
-            color: #ffffff;
+            background-color: #ffffff;
+            color: #1f1f20;
             border-radius: 0px;
             font-size: 18px;
             text-align: center;
@@ -186,12 +186,12 @@
             align-items: center;
             justify-content: center;
             background: white;
-            color: #F067A6;
+            color: #13ca5e;
             font-weight: bold;
             font-size: 0.9em;
             border-radius: 4px;
             padding: 2px 6px;
-            border: 2px solid #F067A6;
+            border: 2px solid #13ca5e;
         }
 
         input[type="text"],
@@ -213,6 +213,7 @@
         }
 
         .visit-buttons,
+        .Precautions-buttons,
         .symptoms,
         .menu-sections,
         .irradiations {
@@ -223,6 +224,7 @@
         }
 
         .visit-buttons button,
+        .Precautions-buttons button,
         .symptoms button,
         .menu-sections button,
         .irradiations button {
@@ -230,7 +232,7 @@
             padding: 10px;
             border: 1px solid #2e2e2e;
             border-radius: 4px;
-            background-color: #f7f7f7;
+            background-color: #ffffff;
             cursor: pointer;
             box-sizing: border-box;
             text-align: center;
@@ -238,6 +240,7 @@
         }
 
         .visit-buttons button.active,
+        .Precautions-buttons button.active,
         .symptoms button.active,
         .menu-sections button.active,
         .irradiations button.active {
@@ -546,6 +549,35 @@
             }
         }
 
+        .Precautions {
+            position: relative;
+            /* ← 上下移動を有効にする */
+            top: -20px;
+            /* ← 上に8pxずらす（数値調整可） */
+            margin-top: 0;
+            /* ← 上のマージンは0にしておくと自然 */
+            margin-bottom: 0px;
+            font-size: 13px;
+            color: #000000;
+            line-height: 1.5;
+            text-align: center;
+            word-wrap: break-word;
+            background-color: #f3f3f3;
+            padding: 0px;
+            border-radius: 4px 4px 4px 4px;
+            border: 1px solid black;
+        }
+
+        /* スマホ対応 */
+        @media (max-width: 768px) {
+            .Precautions {
+                font-size: 11.5px;
+                top: -10px;
+                /* ← モバイルでは少し控えめに上にずらす */
+                line-height: 2.0;
+            }
+        }
+
         .symptoms,
         .options {
             display: block;
@@ -575,7 +607,7 @@
 
         .highlight-background {
             cursor: pointer;
-            background-color: #F067A6;
+            background-color: #13ca5e;
             padding: 10px;
             border-radius: 6px;
             font-size: 18px;
@@ -593,6 +625,12 @@
         .options {
             display: block;
             /* ボタンを縦並びに */
+        }
+
+        .highlight-text {
+            display: inline-block;
+            color: #080808;
+            /* オプションテキストの色 */
         }
 
         .info-row {
@@ -622,7 +660,7 @@
         }
 
         .edit-button:hover {
-            background-color: #F067A6;
+            background-color: #141414;
             color: #ffffff;
             /* ← 黒背景に合わせて文字色を白にすると視認性が上がります（任意） */
         }
@@ -631,7 +669,7 @@
 
         input:focus,
         textarea:focus {
-            border-color: #F067A6;
+            border-color: #13ca5e;
             outline: none;
             box-shadow: 0 0 8px rgba(0, 123, 255, 0.2);
         }
@@ -656,13 +694,13 @@
             width: 100%;
             padding: 15px;
             font-size: 18px;
-            background-color: #F067A6;
+            background-color: #272727;
             margin-top: 12px;
             /* ← ここで下方向にずらす */
         }
 
         .submit-button:hover {
-            background-color: #F067A6;
+            background-color: #ffffff;
         }
 
         @media (max-width: 768px) {
@@ -684,8 +722,8 @@
             outline: 1px solid #2b2b2b;
             /* ここで枠線を指定 */
             outline-offset: 2px;
-    /* 外側に色を追加 */
-    box-shadow: 0 0 0 3px #F067A6
+            /* 外側に色を追加 */
+            box-shadow: 0 0 0 3px #2b2b2b
         }
 
         /* 必須マークのスタイル */
@@ -795,8 +833,31 @@
     </div>
 
     <div class="container">
-        <h1>ゆりのき整骨院<br>予約フォーム
+        <h1>予約フォームA<br>予約フォーム
         </h1>
+        <div class="Precautions">・施術不可能な方
+・妊婦の方<br>
+・顔部分がケロイド性皮膚の方<br>
+・ひどい脂性肌の方、肝炎保菌者の方<br>
+・乾癬の方、眉毛部分にアトピーのある方<br>
+・にきび性皮膚の方、極度の敏感肌の方<br>
+・アートメイク施術を受けて1ヵ月経っていない方<br>
+・持病のある方<br>
+（確実な病院の許可がなければ施術不可）<br>
+・未成年の方は保護者の方の同意書にサインが必要。<br><br>
+
+※既存のアートメイク施術痕がある方や<br>
+左右の差（非対称）を気にされる方は、<br>
+洗顔後メイクを落とした状態で<br>
+無補正写真を送ってください。（自撮り写真不可）<br>
+
+以上を無視されて施術を受けられた場合は<br>
+自己責任となりますので、<br>
+ご理解の程、お願いいたします。</div>
+        <div class="Precautions-buttons">
+            <button type="button" id="firstPrecautions" onclick="selectPrecautions(this)">同意する</button>
+            <button type="button" id="repeatPrecautions" onclick="selectPrecautions(this)">同意しない</button>
+        </div>
         <!-- 追加するボタン -->
         <div class="repeat-booking-wrapper">
             <button type="button" id="repeatBookingButton" onclick="applyPreviousSelection()">
@@ -814,8 +875,9 @@
         <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
         <div class="info-text">※メニューを選択すると<br>空き状況のカレンダーが表示されます</div>
         <div class="menu-sections">
-            <button type="button" onclick="showMenu('male')">初回来店</button>
-            <button type="button" onclick="showMenu('female')">2回目以降</button>
+            <button type="button" onclick="showMenu('male')">ブライダルコース</button>
+            <button type="button" onclick="showMenu('female')">シェービングコース</button>
+            <button type="button" onclick="showMenu('whitening')">マッサージコース</button>
         </div>
 
         <div id="treatment-text" style="display: none; margin-bottom: 10px;"></div>
@@ -826,12 +888,9 @@
             </div>
             <div class="symptoms">
                 <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">和装プラン〈30分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment2')"
-                    data-price="15000">洋装プランA〈60分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment3')"
-                    data-price="15000">洋装プランB〈120分〉</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment4')"
-                    data-price="15000">洋装プランC〈30分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">洋装プランA〈60分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">洋装プランB〈120分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="15000">洋装プランC〈30分〉</button>
             </div>
             <div class="labeltyuuou">
                 <span class="highlight-text">オプション</span>
@@ -848,7 +907,7 @@
 
         <div id="female" class="menu-section">
             <div class="labeltyuuou">
-                <span class="highlight-text">◆2回目以降◆</span>
+                <span class="highlight-text">◆シェービングコース◆</span>
             </div>
             <div class="symptoms">
                 <button type="button" onclick="selectSymptom(this, 'treatment5')"
@@ -881,6 +940,47 @@
             </div>
         </div>
 
+        <div id="whitening" class="menu-section">
+            <div class="labeltyuuou">
+                <span class="highlight-text">◆マッサージコース◆</span>
+            </div>
+            <div class="symptoms">
+                <button type="button" onclick="selectSymptom(this, 'treatment8')"
+                    data-price="15000">リラックスマッサージ〈30分〉</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment9')"
+                    data-price="15000">ベーシックマッサージ〈30分〉</button>
+            </div>
+            <div class="labeltyuuou">
+                <span class="highlight-text">オプション</span>
+            </div>
+            <div class="irradiations">
+                <button type="button" id="twelvethirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">眉カット〈30分〉</button>
+                <button type="button" id="thirteenthirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">襟足〈30分〉</button>
+                <button type="button" id="fourteenthirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">背中</button>
+                <button type="button" id="fifteenthirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">背中(腰まで)〈30分〉</button>
+                <button type="button" id="sixteenthirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">デコルテ〈30分〉</button>
+                <button type="button" id="seventeenthirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">腕〈30分〉</button>
+                <button type="button" id="eighteenthirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">保湿パック〈30分〉</button>
+                <button type="button" id="nineteenthirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">美白パック〈30分〉</button>
+            </div>
+        </div>
+
+
+        <div class="label">施術回数<span class="required">必須</span></div>
+        <div class="visit-buttons">
+            <button type="button" id="firstVisit" onclick="selectVisit(this)">1回目</button>
+            <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目</button>
+            <button type="button" id="sanbanmeVisit" onclick="selectVisit(this)">3回目以降</button>
+        </div>
+        
         <div class="label">希望日時<span class="required">必須</span></div>
         <div class="calendar-container">
             <!-- 月を独立して配置 -->
@@ -936,6 +1036,7 @@
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
     <script>
         let visitCount = '';
+        let PrecautionsCount = '';
         let selectedMenu = '';
         let selectedSymptom = [];  // 配列として定義
         let selectedFullDate = '';
@@ -960,8 +1061,8 @@
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let visitTimes = {
-            '初回来店': 30,
-            '2回目以降': 0
+            '1回目〈30分〉': 30,
+            '2回目以降〈0分〉': 0
         };
 
         let selectedVisitTime = 0; // 訪問回数で選択された時間
@@ -1339,6 +1440,7 @@ function updateDisplayInfo() {
 
             document.getElementById('firstVisit').classList.remove('active');
             document.getElementById('repeatVisit').classList.remove('active');
+            document.getElementById('sanbanmeVisit').classList.remove('active');
             element.classList.add('active');
             visitCount = element.innerText;
 
@@ -1346,6 +1448,24 @@ function updateDisplayInfo() {
             selectedVisitTime = visitTimes[visitCount];
 
             console.log('選択された訪問回数の時間:', selectedVisitTime);
+
+            // カレンダーを更新するために取得する日付を渡す
+            fetchAvailability(currentDate);
+        }
+
+        function selectPrecautions(element) {
+            // 選択された日時をリセット
+            selectedFullDate = '';
+
+            document.getElementById('firstPrecautions').classList.remove('active');
+            document.getElementById('repeatPrecautions').classList.remove('active');
+            element.classList.add('active');
+            PrecautionsCount = element.innerText;
+
+            // 選択された訪問回数に対応する時間を取得
+            selectedPrecautionsTime = PrecautionsTimes[PrecautionsCount];
+
+            console.log('選択された訪問回数の時間:', selectedPrecautionsTime);
 
             // カレンダーを更新するために取得する日付を渡す
             fetchAvailability(currentDate);
@@ -1455,6 +1575,8 @@ function updateDisplayInfo() {
             const formData = {
                 name: document.getElementById('name').value.trim(),
                 phone: document.getElementById('phone').value.trim(),
+                visitCount: visitCount,
+                PrecautionsCount: PrecautionsCount,
                 selectedMenu: selectedMenu,
                 selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null, // 空の選択肢をチェック
                 irradiationsCount: irradiationsCount,
@@ -1478,6 +1600,16 @@ function updateDisplayInfo() {
                 return;
             }
 
+            if (!formData.visitCount) {
+                alert('施術回数を選択してください。');
+                return;
+            }
+
+            if (!formData.PrecautionsCount) {
+                alert('同意を選択しない場合、ご予約は出来ません。');
+                return;
+            }
+
             if (!formData.dates) {
                 alert('希望日時を選択してください。');
                 return;
@@ -1486,7 +1618,7 @@ function updateDisplayInfo() {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nコース：${formData.selectedMenu}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nコース：${formData.selectedMenu}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。');
@@ -1550,21 +1682,13 @@ function updateDisplayInfo() {
             const calendar = document.getElementById('calendar1');
             const table = calendar.querySelector('table tbody');
 
-const times = [
-    '08:30', '08:45',
-    '09:00', '09:15', '09:30', '09:45',
-    '10:00', '10:15', '10:30', '10:45',
-    '11:00', '11:15', '11:30', '11:45',
-    '12:00', '12:15', '12:30', '12:45',
-    '13:00', '13:15', '13:30', '13:45',
-    '14:00', '14:15', '14:30', '14:45',
-    '15:00', '15:15', '15:30', '15:45',
-    '16:00', '16:15', '16:30', '16:45',
-    '17:00', '17:15', '17:30', '17:45',
-    '18:00', '18:15', '18:30', '18:45',
-    '19:00', '19:15', '19:30', '19:45',
-    '20:00'
-];
+            const times = [
+                '09:00', '09:30', '10:00', '10:30', '11:00', '11:30',
+                '12:00', '12:30', '13:00', '13:30',
+                '14:00', '14:30', '15:00', '15:30',
+                '16:00', '16:30', '17:00', '17:30',
+                '18:00'
+            ];
 
             if (table.rows.length === 0) {
                 for (const time of times) {
@@ -1640,6 +1764,17 @@ const times = [
                         continue;
                     }
 
+                    // 18時以降に終了する予約を不可にする (17:30は可)
+                    if (slotEnd.getHours() === 18 && slotEnd.getMinutes() > 0) {
+                        cell.textContent = '✕';
+                        cell.classList.add('unavailable');
+                        continue;
+                    } else if (slotEnd.getHours() > 18) {
+                        cell.textContent = '✕';
+                        cell.classList.add('unavailable');
+                        continue;
+                    }
+
                     // ここで終了時間を使った条件処理を行う
                     // 例えば、リアルタイムで既に過ぎた時間帯は×にする
                     if (slotStart < now) {
@@ -1647,25 +1782,6 @@ const times = [
                         cell.classList.add('unavailable');
                         continue;
                     }
-
-            // === 追加要件：水・土は 8:30〜14:00 以外は × にする ===
-            // 0:日, 1:月, 2:火, 3:水, 4:木, 5:金, 6:土
-            const dow = slotStart.getDay();
-            if (dow === 3 || dow === 6) { // 水(3) or 土(6)
-                const windowStart = new Date(slotStart);
-                windowStart.setHours(8, 30, 0, 0);  // 8:30
-
-                const windowEnd = new Date(slotStart);
-                windowEnd.setHours(14, 30, 0, 0);    // 14:00
-
-                // 枠の開始〜終了がウィンドウに収まらなければ ×
-                const withinWindow = (slotStart >= windowStart) && (slotEnd <= windowEnd);
-                if (!withinWindow) {
-                    cell.textContent = '✕';
-                    cell.classList.add('unavailable');
-                    continue; // 以降の営業日ロジックはスキップ
-                }
-            }
 
                     const isBusinessDay = businessDays.some(businessDay => {
                         const businessDayStart = new Date(businessDay.start);
@@ -1703,7 +1819,7 @@ const times = [
                         cell.classList.add('unavailable');
                     }
                     // 日曜日で、営業日ではない場合
-                    else if (slotStart.getDay() === 1 && !isBusinessDay && businessEventTimes.length === 0) {
+                    else if (slotStart.getDay() === 0 && !isBusinessDay && businessEventTimes.length === 0) {
                         cell.textContent = '✕';
                         cell.classList.add('unavailable');
                     }
