--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
             line-height: 1.5;
             text-align: center;
             word-wrap: break-word;
-            background-color: #f3f3f3;
+            background-color: #fafafa;
             padding: 0px;
             border-radius: 4px 4px 4px 4px;
             border: 1px solid black;
@@ -700,7 +700,7 @@
         }
 
         .submit-button:hover {
-            background-color: #ffffff;
+            background-color: #272727;
         }
 
         @media (max-width: 768px) {
@@ -833,7 +833,7 @@
     </div>
 
     <div class="container">
-        <h1>予約フｓｓｓｓォームA<br>予約フォーム
+        <h1>予約フォームA<br>予約フォーム
         </h1>
         <div class="Precautions">・施術不可能な方
 ・妊婦の方<br>
@@ -886,22 +886,21 @@
             <div class="labeltyuuou">
                 <span class="highlight-text">◆ブライダルコース◆</span>
             </div>
+        <div class="Precautions">・施術時間は約2時間を目安にお越しください。<br>
+・前日および当日の飲酒はお控えください。<br>
+・当日はメイクをしたままご来店いただいても構いません。<br>
+　ただし施術後（当日）は水に濡れる行為を避けてお過ごしください。<br>
+・施術日から5〜7日間は以下を避けてください。<br>
+　温泉・サウナ・プール・激しい運動・日焼け など。<br>
+・施術した箇所は、1週間もしくはかさぶたが落ちるまでは 強く擦ったり、不必要に触れたりしないでください。<br>
+・今回のモニター価格のお支払いは現金のみとなります。<br>
+　（キャッシュレス決済をご希望の場合は事前にご相談ください）<br>
+・ご不明点などがあれば、ご連絡ください。</div>
             <div class="symptoms">
                 <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">和装プラン〈30分〉</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">洋装プランA〈60分〉</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">洋装プランB〈120分〉</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="15000">洋装プランC〈30分〉</button>
-            </div>
-            <div class="labeltyuuou">
-                <span class="highlight-text">オプション</span>
-            </div>
-            <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">眉カット〈30分〉</button>
-                <button type="button" id="secondirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">ベーシックマッサージ〈30分〉</button>
-                <button type="button" id="thirdirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">リラックスマッサージ〈30分〉</button>
             </div>
         </div>
 
@@ -909,6 +908,16 @@
             <div class="labeltyuuou">
                 <span class="highlight-text">◆シェービングコース◆</span>
             </div>
+        <div class="Precautions">・施術時間は約2時間を目安にお越しください。<br>
+・前日および当日の飲酒はお控えください。<br>
+・施術の前後1週間は、カラーやパーマなどはお控えください。<br>
+・施術後〜5日間ほどは、髪を洗う際は ぬるま湯で優しく扱ってください。<br>
+・施術日から5〜7日間は以下を避けてください。<br>
+　温泉・サウナ・プール・激しい運動・日焼け など。<br>
+・施術した箇所は、1週間もしくはかさぶたが落ちるまでは 強く擦ったり、不必要に触れたりしないでください。<br>
+・今回のモニター価格のお支払いは現金のみとなります。<br>
+　（キャッシュレス決済をご希望の場合は事前にご相談ください）<br>
+・ご不明点などがあれば、ご連絡ください。</div>
             <div class="symptoms">
                 <button type="button" onclick="selectSymptom(this, 'treatment5')"
                     data-price="15000">リラックスコース〈60分〉</button>
@@ -944,6 +953,20 @@
             <div class="labeltyuuou">
                 <span class="highlight-text">◆マッサージコース◆</span>
             </div>
+        <div class="Precautions">・施術時間は約3時間を目安にお越しください。<br>
+・唇の周りを特に清潔に保つ。<br>
+　（冷やす場合は氷を直接当てず、ガーゼの上に氷パックをのせて使用してください）<br>
+・刺激の強い食べ物や、熱い・熱すぎる飲み物は控えてください。<br>
+・施術後3日程度は水分もストローを使わずに摂取し、食事も刺激物を控えてください。<br>
+・感染予防のため、処方された抗ウイルス薬は必ず服用してください。<br>
+・喫煙・飲酒はお控えください。<br>
+・ヘルペスができた場合は自己判断で潰さず、処方された抗ウイルス薬を3〜5日間必ず服用してください。<br>
+・施術後は直接手で触れないように注意してください。<br>
+・ワセリンを薄く塗布してください。<br>
+・施術した箇所は、1週間もしくはかさぶたが落ちるまでは 強く擦ったり、不必要に触れたりしないでください。<br>
+・感染を防ぐため、施術後から再生皮膚が安定するまでの約1週間はメイクを避けてください。<br>
+・角質が落ちた後は乾燥しないように、保湿をしっかり行ってください。<br>
+・唇のホワイトニングは施術から2ヶ月後より可能です。</div>
             <div class="symptoms">
                 <button type="button" onclick="selectSymptom(this, 'treatment8')"
                     data-price="15000">リラックスマッサージ〈30分〉</button>
